<resources>
    <string name="app_name">MakeMeals</string>
    <string name="username_placeholder">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="singup">Sign up</string>
    <string name="home">Home</string>
    <string name="search_meals">Search Meals</string>
    <string name="favorites">favorites</string>
    <string name="logo">logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_search_query_blank_fragment">Hello Search Query Blank Fragment</string>
    <string name="hello_blank_recipe_details_fragment">Hello recipe details fragment</string>
    <string name="hello_blank_profile_fragment">Hello blank profile fragment</string>
    <string name="hello_blank_listview_fragment">Hello blank listview fragment</string>
    <string name="hello_blank_ingredients_fragment">hello blank ingredients fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="carbs">carbs:</string>
    <string name="grams_unit">g</string>
    <string name="cals">cals:</string>
    <string name="carbsValuePlaceholder">84</string>
    <string name="proteins">proteins:</string>
    <string name="fat">fat:</string>
    <string name="fatsValuePlaceholder">20</string>
    <string name="proteinsValuePlaceholder">19</string>
    <string name="calsValuePlaceholder">584</string>
    <string name="username">Username</string>
    <string name="log_out">Log Out</string>
    <string name="ingredient_name_placeholder">Ingredient Name</string>
    <string name="date_placeholder">01/01/2001</string>
    <string name="remove_button_description">remove</string>
    <string name="type_placeholder">Type</string>
    <string name="diet_placeholder">diet</string>
    <string name="search">Search</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="add_button">add Button</string>
    <string name="camera_button">Camera Button</string>
    <string name="instructions_text_placeholder">Instructions Text</string>
    <string name="instruction_number">1.</string>
    <string name="ready_in">Ready In:</string>
    <string name="_45m">45m</string>
    <string name="types">Types:</string>
    <string name="lunch_main_course">lunch, main course</string>
    <string name="servings">Servings:</string>
    <string name="_2">2</string>
    <string name="diet">Diet:</string>
    <string name="no_diet">No Diet</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instructions">Instructions:</string>
    <string name="cart">Cart</string>
    <string name="unchecked">Unchecked</string>
    <string name="clear_list">Clear list</string>
    <string name="checked">checked</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="offline">offline</string>
    <string name="kcal">kcal</string>
    <string name="recipe_image">recipe image</string>
    <string name="username_password_required">Username and password are required</string>
    <string name="login_successful">Login successful</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="error">Error</string>
    <string name="ingredient_deleted">Ingredient deleted</string>
    <string name="undo">Undo</string>
    <string name="error_deleting_ingredient">Error deleting ingredient</string>
    <string name="error_saving_recipe">Error saving recipe</string>
    <string name="error_unsaving_recipe">Error unsaving recipe</string>
    <string name="error_favoriting_recipe">Error favoriting recipe</string>
    <string name="error_unfavoriting_recipe">Error unfavoriting recipe</string>
    <string name="error_getting_nutrients">Error getting nutrients</string>
    <string name="recipe_saved">Recipe Saved</string>
    <string name="recipe_unsaved">Recipe Unsaved</string>
    <string name="recipe_favorited">Recipe Favorited</string>
    <string name="recipe_unfavorited">Recipe Unfavorited</string>
    <string name="picture_not_taken">Picture wasn\'t taken!</string>
    <string name="failed_to_create_directory">Failed to create directory</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="swipe_left_to_remove_item">Swipe left to remove item</string>
    <string name="add">Add</string>
    <string name="failed_to_get_image_text">Failed to get image text</string>
    <string name="add_ingredients_to_shopping_list">Add ingredients to shopping list</string>
    <string name="ingredients_added_to_shopping_list">Ingredients added to shopping list</string>
    <string name="error_adding_ingredients_to_shopping_list">Error adding ingredients to shopping list</string>
    <string name="error_saving_shopping_items">Error saving shopping items</string>
    <string name="error_searching_recipes">Error searching recipes</string>
    <string name="error_getting_shopping_list">Error getting shopping list</string>
    <string name="clear_shopping_list">Clear Shopping List</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_shopping_list_confirmation">Are you sure you want to clear your shopping list?</string>
    <string name="error_deleting_shopping_items">Error deleting shopping items</string>
    <string name="error_clearing_shopping_list">Error clearing shopping list</string>
    <string name="share_image">Share Image</string>
    <string name="ingredient_name_is_required">Ingredient name is required</string>
    <string name="_0">0</string>
    <string name="error_getting_search_ingredients">Error getting search ingredients</string>
    <string name="ingredient_image">ingredient_image</string>
    <string name="quantity">1 Large</string>
    <string name="share_button">share button</string>
    <string name="shopping_list_button">shopping list button</string>
    <string name="nutrition">Nutrition</string>
    <string name="ingredients_selector">ingredients</string>
    <string name="instructions_selector">Instructions</string>
    <string name="add_ingredient_icon">add ingredient icon</string>
    <string name="vegetarian">vegetarian</string>
    <string name="breakfast_lunch_dinner">Breakfast, Lunch, Dinner</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snacks</string>
    <string name="error_getting_recommendations">Error getting recommendations</string>
    <string name="error_getting_recipes">Error getting recipes</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="error_saving_recommendation">Error Saving Recommendation</string>
    <string name="saved">Saved</string>
    <string name="favorite">Favorite</string>
</resources>