<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/recipe_image" />

<!--    Recipe Item Details Block-->
    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/recipeTitle"
            android:layout_width="wrap_content"
            android:text="@string/recipe_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

<!--        Nution Summary Block-->
        <LinearLayout
            android:id="@+id/nutritionInfoLinearLayout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/cals" />

                    <TextView
                        android:id="@+id/calsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="3dp"
                        android:text="@string/calsValuePlaceholder" />

                    <TextView
                        android:id="@+id/calsUnit"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kcal" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/carbs" />

                    <TextView
                        android:id="@+id/carbsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="3dp"
                        android:text="@string/carbsValuePlaceholder" />
                    <TextView
                        android:id="@+id/carbsUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/grams_unit" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/proteins" />

                    <TextView
                        android:id="@+id/proteinsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="3dp"
                        android:text="@string/proteinsValuePlaceholder" />
                    <TextView
                        android:id="@+id/proteinsUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/grams_unit" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/fat" />

                    <TextView
                        android:id="@+id/fatsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:textSize="13sp"
                        android:text="@string/fatsValuePlaceholder" />
                    <TextView
                        android:id="@+id/fatsUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/grams_unit" />
                </LinearLayout>
            </LinearLayout>

            <ToggleButton
                android:id="@+id/saveToggleButton"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:background="@drawable/save_icon_selector"
                android:text=""
                android:textOff=""
                android:textOn=""/>
            <!--Favorite Recipe Button-->
            <ToggleButton
                android:id="@+id/favoriteToggleButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="15dp"
                android:checked="false"
                android:background="@drawable/favorites_icon_selector"
                android:text=""
                android:textOff=""
                android:textOn=""/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>