<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRecipeDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@color/white"
    tools:context=".fragments.RecipeDetailsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">
        
        <!-- recipe image -->
        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="200dp"
            android:layout_height="150dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/recipe_image" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_gravity="center"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:indeterminate="true"
            android:visibility="gone" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/saveToggleButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:background="@drawable/save_icon_selector"
                android:text=""
                android:textOff=""
                android:textOn=""/>
            <!--Favorite Recipe Button-->
            <ToggleButton
                android:id="@+id/favoriteToggleButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:background="@drawable/favorites_icon_selector"
                android:text=""
                android:textOff=""
                android:textOn=""/>

            <ImageButton
                android:id="@+id/shareImageButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:background="@drawable/share_icon_make_meals"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:contentDescription="@string/share_button" />

            <ImageButton
                android:id="@+id/shoppingListImageButton"
                android:layout_width="22dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shopping_cart_icon_make_meals"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:contentDescription="@string/shopping_list_button" />

            <!-- saved, favorite, sharing, and shopping list image buttons -->
        </LinearLayout>
    </LinearLayout>

    <!-- recipe title -->
    <TextView
        android:id="@+id/recipeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/recipe_title"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/recipeInfoToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true"
        app:checkedButton="@+id/nutritionButton">
        <Button
            android:id="@+id/nutritionButton"
            android:layout_weight="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutrition"
            android:textSize="12sp"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/ingredientsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="12sp"
            android:text="@string/ingredients_selector"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/instructionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="12sp"
            android:text="@string/instructions_selector"
            style="?attr/materialButtonOutlinedStyle"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <!-- nutrition info -->
    <LinearLayout
        android:id="@+id/nutritionInfoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical">
        <!--1st block-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
            <!-- ready in -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/ready_in"/>

                <!-- ready in time -->
                <TextView
                    android:id="@+id/readyInTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_45m"/>
            </LinearLayout>

            <!-- Types -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/types"/>

                <!-- ready in time -->
                <TextView
                    android:id="@+id/typesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch_main_course"/>
            </LinearLayout>
        </LinearLayout>
        <!--2nd block-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <!-- ready in -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/servings"/>

                <!-- ready in time -->
                <TextView
                    android:id="@+id/servingsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"/>
            </LinearLayout>

            <!-- Types -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/diet"/>

                <!-- ready in time -->
                <TextView
                    android:id="@+id/dietsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_diet"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <!-- recipe Ingredients -->
    <LinearLayout
        android:id="@+id/ingredientsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/ingredients"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipeDetailIngredientsRecyclerView"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <!-- recipe instructions -->
    <LinearLayout
        android:id="@+id/instructionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/instructions"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipeDetailInstructionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>