<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/ingredient"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etDialogIngredientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:hint="@string/ingredient_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvDialogIngredientDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/date_placeholder"
            android:textStyle="italic" />

    </LinearLayout>

    <ImageButton
        android:layout_gravity="center"
        android:id="@+id/ibRemoveDialogIngredient"
        android:layout_margin="10dp"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@drawable/remove_icon"
        android:contentDescription="@string/remove_button_description"
        android:visibility="visible"/>

</LinearLayout>