<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    >

    <LinearLayout
        android:id="@+id/ingredientLinearLayout"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ingredientNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_name_placeholder"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredientDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/date_placeholder"
            android:textStyle="italic" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/removeImageButton"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:background="@drawable/remove_icon"
        android:contentDescription="@string/remove_button_description"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/selectIngredientCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:visibility="visible"/>

</LinearLayout>
